--- a/mediaqueries.html
+++ b/mediaqueries.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Queries</title>
-    <link rel="stylesheet" href="6.css">
+    <title>level 5 trsndotion state</title>
+    <link rel="stylesheet" href="7.css">
 </head>
 <body>
     <div>div1</div>
